- Remove useless character in email (BR 2928068).
- Every reboot increases the number of 'proc' entries in fstab on 'full'
  installations (BR 2929029).
- Fix message in console menu 'Reset WebGUI password' (BR 2929338).
- Fix initial resolv issue.
- Fix full install upgrade error.
- Fix nsswitch error when ldap is enabled (BR 2936505).

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- It is not possible to get seperate CPU stats per processor on SMP machines because
  FreeBSD does not support that feature.
- Enable 'polling' on interfaces used by a LAGG interface will make it inoperable.
- It is not possible to mount EXT2 disks with an inode size of 256 bytes. You
  have to format it with 128 bytes on Linux to use them on FreeBSD.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.
- Downgrading to 0.69 via WebGUI fails because of broken pipe error.
- FreeBSD's ext2fs module, as of release 7.1, cannot mount ext2 file systems
  with 256-byte large inodes, only 128 byte sized.  Unfortunately, 256 byte is
  the default size with many recent Linux distributions.

FreeNAS 0.7 (Khasadar):
-----------------------

Majors changes:
- Add ability to configure the login shell for a user.
- Upgrade Samba to 3.0.37.
- Upgrade transmission to 1.72.
- Local users must join the group 'ftp' to be able to login via FTP if
  'Local users only' in 'Services|FTP' is enabled.
- Upgrade lighttpd to 1.4.23.
- Add a user portal. This allows a local user to login and change it's
  password. The user must have access permissions to login to the user portal.
  This can be configured in the user configuration WebGUI. Please note that
  the administrator needs to apply changes done by the local users because
  there have to be restarted several services (which is not allowed to be