@@ -83,6 +83,7 @@ Bug fixes:
 - Fix initial resolv issue.
 - Fix full install upgrade error.
 - Fix nsswitch error when ldap is enabled (BR 2936505).
+- Fix transmission umask does not work (BR 2945242).
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
